<resources>
    <string name="app_name">Presis</string>
    <string name="cash_sales">Cash Sale</string>
    <string name="purchases">Purchase</string>
    <string name="expenses">Expenses</string>
    <string name="logo">Presis Finance Logo</string>
    <string name="label_amount">Amount</string>
    <string name="label_intro_sale">Record a Sales Transaction</string>
    <string name="hint_amount">Enter Amount</string>
    <string name="sold_to">Sold To</string>
    <string name="hint_sold_to">Enter a Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hint_description">Give a brief description</string>
    <string name="label_description">Description</string>
    <string name="new_entry">New Entry</string>
    <string name="date_transaction">Transaction Date</string>
    <string name="today">Today</string>
    <string name="hint_date">Select Date</string>
    <string name="label_intro_purchase">Record a purchase transaction</string>
    <string name="buy_from">Bought from</string>
    <string name="hint_buy_from">Enter a name</string>
    <string name="label_intro_expense">Record other sorts of expenses</string>
    <string name="sales_transactions">Sales Transactions</string>
    <string name="purchase_transactions">Purchase Transactions</string>
    <string name="expenses_transactions">Other Expenses</string>
    <string name="no_data">No data to display</string>
    <string name="dialog_title_delete">Confirm Delete</string>
    <string name="dialog_confirm_delete">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="business_name">Full name/Business Name</string>
    <string name="hint_fullname">Enter full name</string>
    <string name="email">E-mail</string>
    <string name="hint_email">Enter e-mail</string>
    <string name="hint_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="show">show</string>
    <string name="signup_error">Could not sign you up. Please try again later</string>
    <string name="signin">Signin</string>
    <string name="signin_error">Could not sign you in. Please try again later</string>
    <string name="new_account">New User Account</string>
    <string name="returning_user">Returning User</string>
    <string name="signout">Signout</string>
    <string name="confirm_signout">Confirm Signout</string>
    <string name="confirm_signout_message">Are you sure you want to signout?</string>
</resources>
