<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLabelIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/label_intro_expense"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLabelAmount"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/label_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelIntro" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLabelAmount"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelAmount" />

        <TextView
            android:id="@+id/tvLabelDescription"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/label_description"
            app:layout_constraintStart_toStartOf="@+id/etAmount"
            app:layout_constraintTop_toBottomOf="@+id/etAmount" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLines="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLabelDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelDescription" />

        <TextView
            android:id="@+id/tvLabelBuyFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/buy_from"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/etDescription"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <EditText
            android:id="@+id/etBuyFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/hint_buy_from"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLabelSoldTo"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelSoldTo" />

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/etDate"
            app:layout_constraintTop_toBottomOf="@+id/etDate" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/tvSave"
            app:layout_constraintEnd_toEndOf="@+id/etSoldTo"
            app:layout_constraintTop_toTopOf="@+id/tvSave"
            app:layout_constraintVertical_bias="0.538" />

        <TextView
            android:id="@+id/tvLabelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/date_transaction"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/tvLabelSoldTo"
            app:layout_constraintTop_toBottomOf="@+id/etSoldTo" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hint_date"
            android:inputType="date"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="@+id/tvLabelDate"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelDate" />

        <CheckBox
            android:id="@+id/cbDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/today"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabelDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etDate"
            app:layout_constraintTop_toTopOf="@+id/tvLabelDate" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>